<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/cool_features">
        <menu>
            <item
                android:id="@+id/whatsDirect"
                android:icon="@drawable/ic_send_color"
                android:title="@string/whats_direct" />
            <item
                android:id="@+id/textRepeater"
                android:icon="@drawable/ic_text_repeat"
                android:title="@string/text_repeater" />
        </menu>
    </item>

    <item
        android:id="@+id/use"
        android:icon="@drawable/ic_question"
        android:title="@string/how_to_use" />

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_email"
        android:title="@string/feedback" />

    <item
        android:id="@+id/rate"
        android:icon="@drawable/ic_star"
        android:title="@string/rate_us" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_this_app" />

    <item
        android:id="@+id/moreApps"
        android:icon="@drawable/ic_more"
        android:title="@string/more_apps" />

    <item
        android:id="@+id/policy"
        android:icon="@drawable/ic_lock"
        android:title="@string/privacy_policies" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit" />

</menu>