<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ad_root_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="45dp"
        android:background="@android:color/white"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/x"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_rating_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/rate_image"
            android:src="@drawable/ic_reward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/rate_quote"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@id/iv_rating_image"
            app:layout_constraintStart_toStartOf="@id/iv_rating_image"
            app:layout_constraintTop_toBottomOf="@id/iv_rating_image" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/star_anim"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="@id/tv_rating_text"
            app:layout_constraintStart_toStartOf="@id/tv_rating_text"
            app:layout_constraintTop_toBottomOf="@id/tv_rating_text"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/stars" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_rate"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:background="#FFBB56"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/rate_now"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:cornerRadius="7dp"
            app:layout_constraintEnd_toEndOf="@id/star_anim"
            app:layout_constraintStart_toStartOf="@id/star_anim"
            app:layout_constraintTop_toBottomOf="@id/star_anim" />

        <TextView
            android:id="@+id/tv_not_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/not_now"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_rate" />

        <TextView
            android:id="@+id/tv_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/i_v_done"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_not_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_not_now" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>